# windowsGames

./: .gitignore  CMakeLists.txt  README.md  cmakecompile.sh
dependencies/glad/: glad.c  glad.h
pyrawin/: CMakeLists.txt
pyrawin/src/: main.cc  window.cc  window.hh
src/: main.c  main.cc  window.cc  window.hh
stupidwin/: .gitignore  Makefile
stupidwin/src/: main.cpp
tetrawin/: CMakeLists.txt
tetrawin/src/: block.cc  block.hh  game.cc  game.hh  main.cc  object.cc  object.hh
